# buyout-deal_-

./: .cursorrules  .gitignore  CLAUDE.md  README.md  pyproject.toml
.cursor/design-docs/: 20260420-0400-lender-lbo-stress-template-design.md
.cursor/plans/: 20260420-lender-lbo-stress-template-RESUME.md  20260420-lender-lbo-stress-template-plan.md
.cursor/rules/: lbo-stress-template-handoff.mdc
.cursor/skills/using-git-worktrees/: SKILL.md
schemas/: NAMED_RANGE_TO_JSON_v1.md  README.md  lbo_dashboard_export_v1.schema.json
schemas/examples/: lbo_dashboard_export_v1.example.json
src/lbo_template/: __init__.py  build.py  conventions.py  layout.py
src/lbo_template/sheets/: __init__.py  s0_readme.py  s1_input_base.py  s2_stress_panel.py  s3_overlay.py  s4_debt.py  s5_waterfall.py  s6_dcf.py  s7_returns_ltv.py  s8_dashboard.py  s9_peer_summary.py  s9a_ciq_trading.py  s9b_ciq_transaction.py  s9c_manual.py
tests/: conftest.py  test_bootstrap.py  test_conventions.py  test_golden_snapshot.py  test_integrity.py  test_s0_readme.py  test_s1_input.py  test_s2_stress.py  test_s3_overlay.py  test_s4_debt.py  test_s5_waterfall.py  test_s6_dcf.py  test_s7_returns_ltv.py  test_s8_dashboard.py  test_s9_ciq_and_peer.py
tests/fixtures/: goldentest_v05.json
